jwt 오류 수정